# ydag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: full_dag.py  test_task.py  test_trigger.py
tests/deprecated/it1/: full_dag.py  test_networkx.py  test_trigger.py
ydag/: dag.py  run_task.py  task.py  trigger.py
ydag/deprecated/it1/: dag.py  example.py
ydag/deprecated/it2/: run_task.py  task.py
ydag/deprecated/it3/: task.py
ydag/deprecated/it4/: run_task.py  task.py
